--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
         <div>
             <div>
                 <h2 class="Subtitulo">
+                    Server de Discord
+                    <p class="Info">
+                        Click en el Boton para Obtener el link
+                    </p>
+                    <center>
+                        <a href="https://discord.gg/zccvNVAQgV" class="button">Discord</a>
+                    </center>
+                </h2>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h2 class="Subtitulo">
                     Minecraft Server
                      <p class="Info">
                         Servidor dedicado a Mods en la vercion 1.12.2 <br>
@@ -110,13 +123,26 @@
                 </h2>
             </div>
         </div>
-    </div>
     <!-- Footer -->
-    <div>
         <div>
-            <footer>
-
-            </footer>
+            <div>
+                <footer class="Footer">
+                    <center>
+                        <h3 class="Text-Footer">
+                            Redes Sociales:
+                            <p class="Text-Footer-1">
+                                (Son redes del Administrador/Streamer del server)
+                            </p>
+                            <br>
+                            <a href="https://www.twitch.tv/elwarsito" class="button-1">Twitch</a>
+                            <br>
+                            <a href="https://www.instagram.com/gaby.ugu/" class="button-2">Instagram</a>
+                            <br>
+                            <a href="https://www.tiktok.com/@elwarsito" class="button-3">TikTok</a>
+                        </h3>
+                    </center>
+                </footer>
+            </div>
         </div>
     </div>
 
